--- a/requirements-py38-linux.txt
+++ b/requirements-py38-linux.txt
@@ -80,3 +80,87 @@ urllib3==1.25.11
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+bleach==3.3.1
+certifi==2021.5.30
+cffi==1.14.6
+chardet==3.0.4
+cycler==0.10.0
+debugpy==1.4.0
+decorator==5.0.9
+defusedxml==0.7.1
+Django==2.2.24
+docutils==0.14
+entrypoints==0.3
+et-xmlfile==1.1.0
+h5py==2.10.0
+idna==2.10
+ipykernel==6.0.3
+ipython==7.25.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==3.0.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+llvmlite==0.36.0
+MarkupSafe==2.0.1
+matplotlib==3.1.3
+matplotlib-inline==0.1.2
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
+numba==0.53.1
+numpy==1.18.5
+openpyxl==3.0.7
+openquake.engine==3.11.3
+packaging==21.0
+pandas==1.1.5
+pandocfilters==1.4.3
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.1
+pkg_resources==0.0.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+psutil==5.6.7
+ptyprocess==0.7.0
+pycparser==2.20
+Pygments==2.9.0
+pyparsing==2.4.7
+pyproj==3.1.0
+pyrsistent==0.18.0
+pyshp==1.2.3
+python-dateutil==2.8.2
+pytz==2021.1
+pyzmq==19.0.2
+qtconsole==5.1.1
+QtPy==1.9.0
+requests==2.23.0
+scipy==1.4.1
+Send2Trash==1.7.1
+Shapely==1.7.1
+six==1.16.0
+sqlparse==0.4.1
+terminado==0.10.1
+testpath==0.5.0
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+urllib3==1.25.11
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
